//
// Copyright (c) 2016-2024 Deephaven Data Labs and Patent Pending
//
package io.deephaven.javascript.proto.dhinternal.io.deephaven_core.proto.table_pb.createinputtablerequest.inputtablekind;

import jsinterop.annotations.JsPackage;
import jsinterop.annotations.JsType;

@JsType(
        isNative = true,
        name = "dhinternal.io.deephaven_core.proto.table_pb.CreateInputTableRequest.InputTableKind.KindCase",
        namespace = JsPackage.GLOBAL)
public class KindCase {
    public static int IN_MEMORY_APPEND_ONLY,
            IN_MEMORY_KEY_BACKED,
            KIND_NOT_SET;
}
